--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+<html lang="en">
     <head>
         <title>Crush 40</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,7 +18,7 @@
         <nav class="nav">
             <div class="other">
                 <img class="logo" src="img/logo_white.svg" alt="Crush 40 Logo">
-                <button class="btn"><img src="img/icons/hamburgerMenu.svg"></button>
+                <button class="btn" title="Toggle Navigation Menu"><img src="img/icons/hamburgerMenu.svg" alt="Menu Icon"></button>
             </div>
 
             <ul class="items">
@@ -62,7 +62,7 @@
                 <!--<p>Containing: Info about the band, interactive trivia quizes, complete listings of live shows, listings of gear, you name it!</p>-->
 
                 <div class="btnSet">
-                    <button class="filledButton btnExplore btnWidthNormal"><span>Explore <img src="img/icons/smallDownArrow.svg"></span></button>
+                    <button class="filledButton btnExplore btnWidthNormal"><span>Explore <img src="img/icons/smallDownArrow.svg" alt="Down Arrow"></span></button>
                     <button class="emptyButton btnViewAll btnWidthNormal">View all sections</button>
                 </div>
             </div>
@@ -87,7 +87,7 @@
                 </div>
 
                 <!-- Image -->
-                <img src="img/content/Both1.jpg" class="stripImg">
+                <img src="img/content/Both1.jpg" class="stripImg" alt="Johnny Gioeli & Jun Senoue">
             </div>
             
             <!-- Band Members -->
@@ -100,26 +100,26 @@
             <div class="bandMembers introSection">
 
                 <!-- Johnny -->
-                <h4 class="johnnyIndicator indicator">VOCALS</h4>
-                <h2 class="johnnyTitle title">Johnny Gioeli</h2>
+                <p class="johnnyIndicator indicator">VOCALS</p>
+                <h4 class="johnnyTitle title">Johnny Gioeli</h4>
                 <p class="johnnyAka aka"><i>(a.k.a. Giovanni Giuseppe Baptista Gioeli)</i></p>
                 <p class="johnnyDesc">Pelting out strong rock melodies you can't avoid singing along to!</p>
-                <img class="johnnyImg img" src="img/content/Johnny.png">
+                <img class="johnnyImg img" src="img/content/Johnny.png" alt="Johnny Gioeli">
 
-                <img class="johnnyTogetherImg" src="img/content/JohnnyAndJun.png">
+                <img class="johnnyTogetherImg" src="img/content/JohnnyAndJun.png" alt="Johnny & Jun">
 
                 <div class="centreSeparator" data-parallax="backgroundY" data-parallax-speed="4" data-parallax-change-at="1000"></div>
 
                 <!-- Jun -->
-                <h4 class="junIndicator indicator">GUITAR</h4>
-                <h2 class="junTitle title">Jun Senoue</h2>
+                <p class="junIndicator indicator">GUITAR</p>
+                <h4 class="junTitle title">Jun Senoue</h4>
                 <p class="junDesc">Laying down irresistable lead and rhythm for every song!</p>
-                <img class="junImg img" src="img/content/Jun.jpg">
+                <img class="junImg img" src="img/content/Jun.jpg" alt="Jun Senoue">
 
                 <div class="junMrJun">
-                    <h4>"Mr Jun Senoue!"</h4>
+                    <h5>"Mr Jun Senoue!"</h5>
                     <p>Johnny <i>loves</i> introducing Jun at Crush 40 shows... <b>A lot</b>...</p>
-                    <img src="img/Placeholder.png">
+                    <img src="img/Placeholder.png" alt="Video of Johnny introducing Jun">
                 </div>
             </div>
 
@@ -134,7 +134,7 @@
                     <button style="font-size: 100%" class="emptyButton btnWidthWide" href="#" data-action="panel" data-page-name="allMembers">View other members</button>
                 </div>
 
-                <img src="img/Placeholder.png" class="stripImg">
+                <img src="img/Placeholder.png" class="stripImg" alt="Crush 40 with full band">
             </div>
 
             <!-- Why "Crush 40"? -->
@@ -151,9 +151,9 @@
         <!-- Guitars -->
         <div class="guitars section">
             <div class="guitar guitar-top">
-                <img class="body" src="img/content/guitars/Sonic-II/BodyHorizontal.svg">
+                <img class="body" src="img/content/guitars/Sonic-II/BodyHorizontal.svg" alt="ESP-SONIC-II Guitar Body">
                 <div class="neck"></div>
-                <img class="headstock headstock-right" src="img/content/guitars/Sonic-II/HeadstockHorizontal.svg">
+                <img class="headstock headstock-right" src="img/content/guitars/Sonic-II/HeadstockHorizontal.svg" alt="ESP-SONIC-II Guitar Headstock">
             </div>
             <div class="middle">
                 <div class="contents">
@@ -163,9 +163,9 @@
                 </div>
             </div>
             <div class="guitar guitar-bottom">
-                <img class="body" src="img/content/guitars/Shadow-II/BodyHorizontal.svg">
+                <img class="body" src="img/content/guitars/Shadow-II/BodyHorizontal.svg" alt="ESP-SHADOW-II Guitar Body">
                 <div class="neck"></div>
-                <img class="headstock headstock-right" src="img/content/guitars/Shadow-II/HeadstockHorizontal.svg">
+                <img class="headstock headstock-right" src="img/content/guitars/Shadow-II/HeadstockHorizontal.svg" alt="ESP-SHADOW-II Guitar Headstock">
             </div>
         </div>
 
@@ -181,10 +181,10 @@
             <div class="panel" id="myPanel">
                 <div class="titlebar">
                     <p class="title">Test</p>
-                    <button class="close closeButton"><img src="img/icons/smallCloseButton.svg"></button>
+                    <button title="Close" class="close closeButton"><img src="img/icons/smallCloseButton.svg" alt="Close Icon"></button>
                 </div>
 
-                <iframe class="contents" src=""></iframe>
+                <iframe title="Menu Contents" class="contents" src=""></iframe>
             </div>
         </div>
     </body>
