--- a/menus/allMembers.html
+++ b/menus/allMembers.html
@@ -42,12 +42,12 @@ var members = [
     </head>
     <body>
         <div class="fixedToCenter fixedLeft">
-            <button class="navLeft"><img src="../img/icons/largeLeftArrow.svg"></button>
+            <button class="navLeft" title="Navigate Left"><img src="../img/icons/largeLeftArrow.svg" alt="Left Arrow"></button>
         </div>
 
         <div class="contents">
             <div class="img">
-                <img src="../img/Placeholder.png">
+                <img src="../img/Placeholder.png" alt="Member Image">
             </div>
     
             <div class="text">
@@ -64,7 +64,7 @@ var members = [
         </div>
 
         <div class="fixedToCenter fixedRight">
-            <button class="navRight"><img src="../img/icons/largeRightArrow.svg"></button>
+            <button class="navRight" title="Navigate Right"><img src="../img/icons/largeRightArrow.svg" alt="Right Arrow"></button>
         </div>
     </body>
 </html>
