--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
+<!DOCTYPE html>
 <html lang="en">
     <head>
         <title>Crush 40</title>
+        <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="The biggest fan-made Crush 40 website on the planet!">
+        <meta name="keywords" content="Crush 40, Johnny Gioeli, Jun Senoue, Sonic the Hedgehog, Crush 40 Live, Crush 40 Discography">
 
         <link href="css/site.css" rel="stylesheet">
         <link href="css/home.css" rel="stylesheet">
