--- a/menus/allMembers.html
+++ b/menus/allMembers.html
@@ -1,8 +1,11 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>Other Band Members</title>
 
+        <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        
         <link href="../css/site.css" rel="stylesheet">
 
         <link href="css/allMembers.css" rel="stylesheet">
