Add functionality to "Explore" button

--- a/index.html
+++ b/index.html
@@ -66,14 +66,14 @@
                 <!--<p>Containing: Info about the band, interactive trivia quizes, complete listings of live shows, listings of gear, you name it!</p>-->
 
                 <div class="btnSet">
-                    <button class="filledButton btnExplore btnWidthNormal"><span>Explore <img src="img/icons/smallDownArrow.svg" alt="Down Arrow"></span></button>
+                    <a class="btnLink" href="#intro"><button class="filledButton btnExplore btnWidthNormal">Explore <img src="img/icons/smallDownArrow.svg" alt="Down Arrow"></button></a>
                     <button class="emptyButton btnViewAll btnWidthNormal">View all sections</button>
                 </div>
             </div>
         </div>
 
         <!-- Introducing... Crush 40! -->
-        <div class="intro section">
+        <div class="intro section" id="intro">
             <h2 style="text-align: center;">Introducing... Crush 40!</h2>
 
             <!-- What is Crush 40? -->
