Add button to access trivia quiz

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                     <p>"Crush 40" does not have a set drummer and bass player!</p> 
                     <p>They either rely on a <span style="font-size: 120%">backing track</span> live, or some other member to fill in temporarily.</span></p>
                     <p>You can view a complete list of all the drummers/bass players they've used here:</p>
-                    <button style="font-size: 100%" class="emptyButton btnWidthWide" href="#" data-action="panel" data-page-name="allMembers">View other members</button>
+                    <button style="font-size: 100%" class="emptyButton btnWidthWide" data-action="panel" data-page-name="allMembers">View other members</button>
                 </div>
 
                 <img src="img/Placeholder.png" class="stripImg" alt="Crush 40 with full band">
@@ -177,7 +177,7 @@
         <div class="trivia section">
             <h2>Trivia Quiz</h2>
             <p class="description">Find out how well you know Crush 40 right here on the site - through this interactive trivia quiz!</p>
-            <button style="font-size: 125%" class="filledButton btnWidthWide takeTrivia" href="#">Start the quiz</button>
+            <button style="font-size: 125%" class="filledButton btnWidthWide takeTrivia" data-action="panel" data-page-name="trivia">Start the quiz</button>
         </div>
 
         <div class="floating">
