Add panel resizing mechanism

--- a/menus/trivia.html
+++ b/menus/trivia.html
@@ -8,6 +8,8 @@
 
         <link href="../css/site.css" rel="stylesheet">
         <link href="css/trivia.css" rel="stylesheet">
+
+        <script src="js/trivia.js"></script>
     </head>
     <body>
         <div class="quiz">
