Add loading screen to menu

--- a/index.html
+++ b/index.html
@@ -188,6 +188,11 @@
                     <button title="Close" class="close closeButton"><img src="img/icons/smallCloseButton.svg" alt="Close Icon"></button>
                 </div>
 
+                <div class="loading-screen">
+                    <p><b>Revvin' Up</b> the engines!</p>
+                    <div class="spinning"></div>
+                </div>
+
                 <iframe title="Menu Contents" class="contents" src=""></iframe>
             </div>
         </div>
