Add images + Drummers to "All Members"

--- a/menus/allMembers.html
+++ b/menus/allMembers.html
@@ -15,30 +15,105 @@
         <script>
 var members = [
     { 
-        name: 'Test', 
-        description: "Just a drummer lol", 
-        img: 'Placeholder.png',
+        name: 'Akht.', 
+        description: `
+            <p>Akht. is the most recent drummer to the band, he's been involved in a significant amount of recent live shows and songs - notable examples including the 30th Anniversary Symphony and MAGFest 2018.</p>
+            <p>The first known performance with him and Jun together is 2012, as part of a "Fiano" show, which was then shortly followed by Japan Game Music Festival (JGMF) one year later.</p>
+            <p>He used to call himself "Act.", so some old tweets by Jun and the like still refer to him as that.</p>
+        `,
+        img: 'Akht.jpg',
         works: [
-            { type: "show", name: "2 Nights 2 Remember" },
-            { type: "song", name: "2 Nights 2 Remember" },
-            { type: "song", name: "Down & Dirty" },
-            { type: "song", name: "Big Mouth" },
-            { type: "song", name: "Light of the Day" },
-            { type: "song", name: "Another Thing" },
-            { type: "song", name: "Another Another" }
+            { type: "show", name: "30th Symphony" },
+            { type: "show", name: "JGMF 2013" },
+            { type: "show", name: "JGMF II:RE" },
+            { type: "song", name: "Team Ultimate: Shadow" },
+            { type: "song", name: "Green Light Ride" },
+            { type: "song", name: "Call Me Crazy" }
         ]
     },
     { 
-        name: 'Test 2', 
-        description: "Just a bassist lol", 
-        img: 'Placeholder.png',
+        name: 'Toru Kawamura', 
+        description: `
+            <p>Toru has performed on a large number of Crush 40 songs, ranging from 2005 all the way up to 2016.</p>
+            <p>He performed live at the Tokyo shows with Crush 40 in 2011 and 2012.</p>
+        `,
+        img: 'Toru.jpg',
         works: [
             { type: "show", name: "Tokyo 2011" },
-            { type: "show", name: "2 Nights 2 Remember" },
-            { type: "show", name: "Live!" },
-            { type: "song", name: "Down & Dirty" },
+            { type: "show", name: "Tokyo 2012 (<i>Live!</i> CD)" },
+            { type: "song", name: "I Am... All of Me" },
+            { type: "song", name: "Never Turn Back" },
+            { type: "song", name: "All Hail Shadow" },
+            { type: "song", name: "His World" },
+            { type: "song", name: "Un-gravitify" },
+            { type: "song", name: "Seven Rings In Hand" },
+            { type: "song", name: "Fight the Knight" },
+            { type: "song", name: "Knight of the Wind (Original Ver.)" },
+            { type: "song", name: "Is It You" },
+            { type: "song", name: "Fire Woman" }
         ]
-    }
+    },
+    { 
+        name: 'Katsuji Kirita', 
+        description: `
+            <p>Katsuji has performed on a number of the Crush 40 songs ranging from 2001 to 2005 and performed live in Tokyo 2014, as featured on the album <i>2 Nights 2 Remember</i>.</p>
+            <p>He was the drummer for the studio version of the hit song <i>Live and Learn</i>.</p>
+        `,
+        img: 'Katsuji.jpg',
+        works: [
+            { type: "show", name: "Tokyo 2014 (<i>2N2R</i> CD)" },
+            { type: "song", name: "2 Nights 2 Remember" },
+            { type: "song", name: "Live & Learn" },
+            { type: "song", name: "What I'm Made Of (Original Ver.)" },
+            { type: "song", name: "Sonic Heroes" },
+            { type: "song", name: "Free" },
+            { type: "song", name: "Knight of the Wind (Final Ver.)" },
+            { type: "song", name: "Live Life" }
+        ]
+    },
+
+    { 
+        name: 'Bobby Jarzombek', 
+        description: `
+            <p>Bobby Jarzombek was involved in the Sonic and the Black Knight soundtrack, and as such was featured on a few studio Crush 40 songs from the game.</p>
+            <p>He has never performed live alongside Crush 40.</p>
+        `,
+        img: 'Bobby.jpg',
+        works: [
+            { type: "song", name: "With Me" },
+            { type: "song", name: "With Me (Massive Power Mix)" },
+            { type: "song", name: "Through the Fire" }
+        ]
+    },
+    { 
+        name: 'Mark Schulman', 
+        description: `
+            <p>Mark Schulman contributed to a <i>re-mix</i> of What I'm Made Of for the "True Blue" soundtrack.</p>
+        `,
+        img: 'Mark.jpg',
+        works: [
+            { type: "song", name: "What I'm Made Of... (True Blue)" }
+        ]
+    },
+    { 
+        name: 'Hirotsugu Homma', 
+        description: `
+            <p>Hirotsugu Homma was the first drummer to be used for Crush 40 - he worked on <i>Open your Heart</i> and all of their <i>NASCAR Arcarde 2000</i> songs.</p>
+            <p>He also performed at the first ever "Crush 40" show in 1998 (although this show was prior to finalizing Johnny as the singer).</p>
+        `,
+        img: 'Hirotsugu.jpg',
+        works: [
+            { type: "show", name: "Sonic Adventure 1998" },
+            { type: "song", name: "Open your Heart" },
+            { type: "song", name: "Dangerous Ground" },
+            { type: "song", name: "Into the Wind" },
+            { type: "song", name: "Revvin' Up" },
+            { type: "song", name: "Watch Me Fly..." },
+            { type: "song", name: "Fuel Me" },
+            { type: "song", name: "All the Way" },
+            { type: "song", name: "In the Lead" }
+        ]
+    },
 ];
         </script>
 
