Improve some fonts for "Intro" section
- "Jun Senoue" heading
- "Johnny Gioeli" heading
- "Introducing Crush 40" heading

--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
 
         <!-- Introducing... Crush 40! -->
         <div class="intro section" id="intro">
-            <h2 style="text-align: center;">Introducing... Crush 40!</h2>
+            <div class="background-2n2r"></div>
+
+            <h2>Introducing <img src="img/logo/EmptyRed.svg">!</h2>
 
             <!-- What is Crush 40? -->
             <div class="blockTitle">
@@ -105,8 +107,12 @@
 
                 <!-- Johnny -->
                 <p class="johnnyIndicator indicator">VOCALS</p>
-                <h4 class="johnnyTitle title">Johnny Gioeli</h4>
-                <p class="johnnyAka aka"><i>(a.k.a. Giovanni Giuseppe Baptista Gioeli)</i></p>
+
+                <div class="johnnyTitle">
+                    <h4 class="title"><span style="font-size: 150%;">Johnny</span> Gioeli</h4>
+                    <p class="johnnyAka aka"><i>(a.k.a. Giovanni Giuseppe Baptista Gioeli)</i></p>
+                </div>
+
                 <p class="johnnyDesc">Pelting out strong rock melodies you can't avoid singing along to!</p>
                 <img class="johnnyImg img" src="img/content/Johnny.png" alt="Johnny Gioeli">
 
@@ -116,7 +122,7 @@
 
                 <!-- Jun -->
                 <p class="junIndicator indicator">GUITAR</p>
-                <h4 class="junTitle title">Jun Senoue</h4>
+                <h4 class="junTitle title"><span style="font-size: 180%;">Jun</span> Senoue</h4>
                 <p class="junDesc">Laying down irresistable lead and rhythm for every song!</p>
                 <img class="junImg img" src="img/content/Jun.jpg" alt="Jun Senoue">
 
