Improve site color scheme

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="opening-intro">
 
                 <!-- Logo -->
-                <img src="img/logo_white.svg" alt="Crush 40 Logo">
+                <img src="img/logo/FanWebsiteLogo.svg" alt="Crush 40 Logo">
 
                 <!-- Text -->
                 <h2>Info, live shows, trivia, history, discography - and more!</h2> 
@@ -76,7 +76,7 @@
         <div class="intro section" id="intro">
             <div class="background-2n2r"></div>
 
-            <h2>Introducing <img src="img/logo/EmptyRed.svg">!</h2>
+            <h2>Introducing <img src="img/logo/EmptyRed.svg" alt="Crush 40">!</h2>
 
             <!-- What is Crush 40? -->
             <div class="blockTitle">
