Improve colors + Pictures

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 <p class="junIndicator indicator">GUITAR</p>
                 <h4 class="junTitle title"><span style="font-size: 180%;">Jun</span> Senoue</h4>
                 <p class="junDesc">Laying down irresistable lead and rhythm for every song!</p>
-                <img class="junImg img" src="img/content/Jun.jpg" alt="Jun Senoue">
+                <img class="junImg img" src="img/content/Jun.png" alt="Jun Senoue">
 
                 <div class="junMrJun">
                     <h5>"Mr Jun Senoue!"</h5>
