Add naming + footer section

--- a/index.html
+++ b/index.html
@@ -153,8 +153,11 @@
             </div>
             
             <div class="naming introSection">
-                <p>The band was originally titled <span style="font-size: 120%">"Sons of Angels"</span> - but they soon discovered a <i>Norwegian rock band</i> already had the same name, who were thinking <span style="font-size: 80%">"Sons of..."</span>.</p>
-                <p>So, they changed it - and their new name, "Crush 40", was a combination of Johnny's wishes at the time, as well as Jun's personal preferences:</p>
+                <p>The band was originally titled <span style="font-size: 120%">"Sons of Angels"</span> - but they soon discovered a <i>Norwegian rock band</i> already had the same name, and were thinking <span style="font-size: 80%">"Sons of..."</span>.</p>
+                <p>At the time, Jun liked the word and drink "Crush" and Johnny didn't want to turn 40, so together they created the new name.</p>
+                <div class="imgContainer">
+                    <img class="img" src="img/content/info/What_Crush_40_Means.svg" alt="Jun likes the drink Crush, and Johnny wanted to Crush 40">
+                </div>
             </div>
         </div>
 
@@ -184,6 +187,15 @@
             <h2>Trivia Quiz</h2>
             <p class="description">Find out how well you know Crush 40 right here on the site - through this interactive trivia quiz!</p>
             <button style="font-size: 125%" class="filledButton btnWidthWide takeTrivia" data-action="panel" data-page-name="trivia">Start the quiz</button>
+        </div>
+
+        <!-- Footer -->
+        <div class="footer section">
+            <img class="image" src="img/logo/FanWebsiteLogo.svg" alt="Crush 40 Logo">
+            <div class="text">
+                <p>This entire site was created completely from scratch by the <b>Crush 40 Fan Community</b> - no templates, no website builder, just raw work from the community!</p>
+                <p>Click here to see a list of the project leads who helped most of all to make this website come to life on your screen today!</p>
+            </div>
         </div>
 
         <div class="floating">
