Show "Loading..." text while initially loading menu

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
             <div class="floatingClose"></div>
             <div class="panel" id="myPanel">
                 <div class="titlebar">
-                    <p class="title">Test</p>
+                    <p class="title">Loading...</p>
                     <button title="Close" class="close closeButton"><img src="img/icons/smallCloseButton.svg" alt="Close Icon"></button>
                 </div>
 
