Create results screen for trivia quiz

--- a/menus/trivia.html
+++ b/menus/trivia.html
@@ -49,11 +49,14 @@
 
         <div class="page resultsPage">
             <div class="resultsScreen">
-                <p class="results">Results</p>
+                <p class="results">Done! Here's what you got!</p>
+                <p class="quote">"Yeah, tickles, pickles, I don't know the names of all these characters!"</p>
                 <div class="correctBar">
                     <div class="correctBarFilled"></div>
-                    <p>X / Y</p>
+                    <p>X%</p>
                 </div>
+                <p class="tryAgainPrompt">Which questions did you get wrong? Well, we're not telling you! Try again!</p>
+                <button class="filledButton">Try again</button>
             </div>
         </div>
     </body>
