--- a/menus/trivia.html
+++ b/menus/trivia.html
@@ -15,7 +15,7 @@
                 { 
                     title: "Test 1", 
                     answers: ["Answer 1", "Answer 2", "Answer 3", "Answer 4"],
-                    correctAnswer: 2
+                    correctAnswer: 0
                 },
                 { 
                     title: "Test 2", 
@@ -25,7 +25,7 @@
                 { 
                     title: "Test 3", 
                     answers: ["AnswerY 1", "AnswerY 2", "AnswerY 3", "AnswerY 4"],
-                    correctAnswer: 3
+                    correctAnswer: 2
                 }
             ];
         </script>
@@ -50,13 +50,13 @@
         <div class="page resultsPage">
             <div class="resultsScreen">
                 <p class="results">Done! Here's what you got!</p>
-                <p class="quote">"Yeah, tickles, pickles, I don't know the names of all these characters!"</p>
+                <p class="quote"></p>
                 <div class="correctBar">
                     <div class="correctBarFilled"></div>
-                    <p>X%</p>
+                    <p class="correctBarPercentage">X%</p>
                 </div>
                 <p class="tryAgainPrompt">Which questions did you get wrong? Well, we're not telling you! Try again!</p>
-                <button class="filledButton">Try again</button>
+                <button class="filledButton tryAgainBtn">Try again</button>
             </div>
         </div>
     </body>
