Fix "All Members" view on mobile

--- a/menus/trivia.html
+++ b/menus/trivia.html
@@ -55,7 +55,7 @@
                     <div class="correctBarFilled"></div>
                     <p class="correctBarPercentage">X%</p>
                 </div>
-                <p class="tryAgainPrompt">Which questions did you get wrong? Well, we're not telling you! Try again!</p>
+                <p class="tryAgainPrompt">Try again for 100%!</p>
                 <button class="filledButton tryAgainBtn">Try again</button>
             </div>
         </div>
