Add bass players to "All Members"

--- a/menus/allMembers.html
+++ b/menus/allMembers.html
@@ -32,6 +32,50 @@ var members = [
         ]
     },
     { 
+        name: 'Takeshi Taneda', 
+        description: `
+            <p>Takeshi is by far the most common bass player Crush 40 uses - he's performed on every single Crush 40 song, except for Open your Heart and the <i>NASCAR Arcade 2000</i> album.</p>
+            <p>He's performed alongside Crush 40 at every single show they've had a bass player, except for ExpoTNT, where fans filled in.</p>
+        `,
+        img: 'Takeshi.jpg',
+        works: [
+            { type: "show", name: "Tokyo 2011" },
+            { type: "show", name: "Tokyo 2012 (<i>Live!</i> CD)" },
+            { type: "show", name: "Tokyo 2014 (<i>2N2R</i> CD)" },
+            { type: "show", name: "JGMF 2013" },
+            { type: "show", name: "JGMF II:RE" },
+            { type: "show", name: "30th Symphony" },
+            { type: "song", name: "Live & Learn" },
+            { type: "song", name: "Sonic Heroes" },
+            { type: "song", name: "What I'm Made Of..." },
+            { type: "song", name: "I Am... All of Me" },
+            { type: "song", name: "Never Turn Back" },
+            { type: "song", name: "All Hail Shadow" },
+            { type: "song", name: "His World" },
+            { type: "song", name: "Seven Rings in Hand" },
+            { type: "song", name: "Knight of the Wind" },
+            { type: "song", name: "Fight the Knight" },
+            { type: "song", name: "Through the Fire" },
+            { type: "song", name: "With Me" },
+            { type: "song", name: "Live Life" },
+            { type: "song", name: "Un-gravitify" },
+            { type: "song", name: "Fire Woman" },
+            { type: "song", name: "Is It You" },
+            { type: "song", name: "Free" },
+            { type: "song", name: "Song of Hope" },
+            { type: "song", name: "Sonic Boom" },
+            { type: "song", name: "Sonic Youth" },
+            { type: "song", name: "One of Those Days" },
+            { type: "song", name: "Rise Again" },
+            { type: "song", name: "2 Nights 2 Remember" },
+            { type: "song", name: "Big Mouth" },
+            { type: "song", name: "Light of the Day" },
+            { type: "song", name: "Down & Dirty" },
+            { type: "song", name: "Green Light Ride" },
+            { type: "song", name: "Call Me Crazy" }
+        ]
+    },
+    { 
         name: 'Toru Kawamura', 
         description: `
             <p>Toru has performed on a large number of Crush 40 songs, ranging from 2005 all the way up to 2016.</p>
@@ -50,10 +94,11 @@ var members = [
             { type: "song", name: "Fight the Knight" },
             { type: "song", name: "Knight of the Wind (Original Ver.)" },
             { type: "song", name: "Is It You" },
-            { type: "song", name: "Fire Woman" }
+            { type: "song", name: "Fire Woman" },
+            { type: "song", name: "Sonic Boom" }
         ]
     },
-    { 
+    {
         name: 'Katsuji Kirita', 
         description: `
             <p>Katsuji has performed on a number of the Crush 40 songs ranging from 2001 to 2008 and performed live in Tokyo 2014, as featured on the album <i>2 Nights 2 Remember</i>.</p>
@@ -96,6 +141,25 @@ var members = [
         ]
     },
     { 
+        name: 'Naoto Shibata', 
+        description: `
+            <p>Naoto is the first bass player Crush 40 used - he, alongside Hirotsugu Homma on drums, performed on "Open your Heart" and all of their <i>NASCAR Arcarde 2000</i> songs.</p>
+            <p>He also performed at the first ever "Crush 40" show in 1998 (although this show was prior to finalizing Johnny as the singer).</p>
+        `,
+        img: 'Naoto.jpg',
+        works: [
+            { type: "show", name: "Sonic Adventure Presentation" },
+            { type: "song", name: "Open your Heart" },
+            { type: "song", name: "Dangerous Ground" },
+            { type: "song", name: "Into the Wind" },
+            { type: "song", name: "Revvin' Up" },
+            { type: "song", name: "Watch Me Fly..." },
+            { type: "song", name: "Fuel Me" },
+            { type: "song", name: "All the Way" },
+            { type: "song", name: "In the Lead" }
+        ]
+    },
+    { 
         name: 'Hirotsugu Homma', 
         description: `
             <p>Hirotsugu Homma was the first drummer to be used for Crush 40 - he worked on <i>Open your Heart</i> and all of their <i>NASCAR Arcarde 2000</i> songs.</p>
@@ -103,7 +167,7 @@ var members = [
         `,
         img: 'Hirotsugu.jpg',
         works: [
-            { type: "show", name: "Sonic Adventure 1998" },
+            { type: "show", name: "Sonic Adventure Presentation" },
             { type: "song", name: "Open your Heart" },
             { type: "song", name: "Dangerous Ground" },
             { type: "song", name: "Into the Wind" },
