Use consistent capitalization in song names

--- a/menus/allMembers.html
+++ b/menus/allMembers.html
@@ -48,14 +48,14 @@ var members = [
             { type: "song", name: "Live & Learn" },
             { type: "song", name: "Sonic Heroes" },
             { type: "song", name: "What I'm Made Of..." },
-            { type: "song", name: "I Am... All of Me" },
+            { type: "song", name: "I Am... All Of Me" },
             { type: "song", name: "Never Turn Back" },
             { type: "song", name: "All Hail Shadow" },
             { type: "song", name: "His World" },
-            { type: "song", name: "Seven Rings in Hand" },
-            { type: "song", name: "Knight of the Wind" },
-            { type: "song", name: "Fight the Knight" },
-            { type: "song", name: "Through the Fire" },
+            { type: "song", name: "Seven Rings In Hand" },
+            { type: "song", name: "Knight Of The Wind" },
+            { type: "song", name: "Fight The Knight" },
+            { type: "song", name: "Through The Fire" },
             { type: "song", name: "With Me" },
             { type: "song", name: "Live Life" },
             { type: "song", name: "Un-gravitify" },
@@ -91,8 +91,8 @@ var members = [
             { type: "song", name: "His World" },
             { type: "song", name: "Un-gravitify" },
             { type: "song", name: "Seven Rings In Hand" },
-            { type: "song", name: "Fight the Knight" },
-            { type: "song", name: "Knight of the Wind (Original Ver.)" },
+            { type: "song", name: "Fight The Knight" },
+            { type: "song", name: "Knight Of The Wind (Original Ver.)" },
             { type: "song", name: "Is It You" },
             { type: "song", name: "Fire Woman" },
             { type: "song", name: "Sonic Boom" }
@@ -112,7 +112,7 @@ var members = [
             { type: "song", name: "What I'm Made Of (Original Ver.)" },
             { type: "song", name: "Sonic Heroes" },
             { type: "song", name: "Free" },
-            { type: "song", name: "Knight of the Wind (Final Ver.)" },
+            { type: "song", name: "Knight Of The Wind (Final Ver.)" },
             { type: "song", name: "Live Life" }
         ]
     },
@@ -127,7 +127,7 @@ var members = [
         works: [
             { type: "song", name: "With Me" },
             { type: "song", name: "With Me (Massive Power Mix)" },
-            { type: "song", name: "Through the Fire" }
+            { type: "song", name: "Through The Fire" }
         ]
     },
     { 
@@ -149,14 +149,14 @@ var members = [
         img: 'Naoto.jpg',
         works: [
             { type: "show", name: "Sonic Adventure Presentation" },
-            { type: "song", name: "Open your Heart" },
+            { type: "song", name: "Open Your Heart" },
             { type: "song", name: "Dangerous Ground" },
-            { type: "song", name: "Into the Wind" },
+            { type: "song", name: "Into The Wind" },
             { type: "song", name: "Revvin' Up" },
             { type: "song", name: "Watch Me Fly..." },
             { type: "song", name: "Fuel Me" },
-            { type: "song", name: "All the Way" },
-            { type: "song", name: "In the Lead" }
+            { type: "song", name: "All The Way" },
+            { type: "song", name: "In The Lead" }
         ]
     },
     { 
@@ -168,14 +168,14 @@ var members = [
         img: 'Hirotsugu.jpg',
         works: [
             { type: "show", name: "Sonic Adventure Presentation" },
-            { type: "song", name: "Open your Heart" },
+            { type: "song", name: "Open Your Heart" },
             { type: "song", name: "Dangerous Ground" },
-            { type: "song", name: "Into the Wind" },
+            { type: "song", name: "Into The Wind" },
             { type: "song", name: "Revvin' Up" },
             { type: "song", name: "Watch Me Fly..." },
             { type: "song", name: "Fuel Me" },
-            { type: "song", name: "All the Way" },
-            { type: "song", name: "In the Lead" }
+            { type: "song", name: "All The Way" },
+            { type: "song", name: "In The Lead" }
         ]
     },
 ];
