Use version indicators for variants only

--- a/menus/allMembers.html
+++ b/menus/allMembers.html
@@ -109,7 +109,7 @@ var members = [
             { type: "show", name: "Tokyo 2014 (<i>2N2R</i> CD)" },
             { type: "song", name: "2 Nights 2 Remember" },
             { type: "song", name: "Live & Learn" },
-            { type: "song", name: "What I'm Made Of (Original Ver.)" },
+            { type: "song", name: "What I'm Made Of" },
             { type: "song", name: "Sonic Heroes" },
             { type: "song", name: "Free" },
             { type: "song", name: "Knight Of The Wind (Final Ver.)" },
