Use ring images of band members

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 </div>
 
                 <p class="johnnyDesc">Pelting out strong rock melodies you can't avoid singing along to!</p>
-                <img class="johnnyImg img" src="img/content/Johnny.png" alt="Johnny Gioeli">
+                <img class="johnnyImg img" src="img/content/Johnny_Ring.png" alt="Johnny Gioeli">
 
                 <img class="johnnyTogetherImg" src="img/content/JohnnyAndJun.png" alt="Johnny & Jun">
 
@@ -124,7 +124,7 @@
                 <p class="junIndicator indicator">GUITAR</p>
                 <h4 class="junTitle title"><span style="font-size: 180%;">Jun</span> Senoue</h4>
                 <p class="junDesc">Laying down irresistable lead and rhythm for every song!</p>
-                <img class="junImg img" src="img/content/Jun.png" alt="Jun Senoue">
+                <img class="junImg img" src="img/content/Jun_Ring.png" alt="Jun Senoue">
 
                 <div class="junMrJun">
                     <h5>"Mr Jun Senoue!"</h5>
