Create credits page

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         </div>
 
         <!-- Footer -->
-        <div class="footer section">
+        <div class="footer section" data-action="panel" data-page-name="credits">
             <img class="image" src="img/logo/FanWebsiteLogo.svg" alt="Crush 40 Logo">
             <div class="text">
                 <p>This entire site was created completely from scratch by the <b>Crush 40 Fan Community</b> - no templates, no website builder, just raw work from the community!</p>
