Add together image

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     <button style="font-size: 100%" class="emptyButton btnWidthWide" data-action="panel" data-page-name="allMembers">View other members</button>
                 </div>
 
-                <img src="img/Placeholder.png" class="stripImg" alt="Crush 40 with full band">
+                <img src="img/content/members/Together.png" class="stripImg" alt="Crush 40 with full band">
             </div>
 
             <!-- Why "Crush 40"? -->
